--- a/client/html/home.html
+++ b/client/html/home.html
@@ -43,12 +43,20 @@
 	  	<!--================================ NAVBAR ===================================-->
 
 	  	<div id="navigation-bar">
-		  	<nav class="navbar navbar-default">
+		  	<nav class="navbar navbar-default" id="barColor">
 		  		<div class="container">
 			  		<div class="nav navbar-header">
 			         	<a id="logo" class="navbar-brand home-button initially-hidden" href="#home">Go Online</a>
 		       		</div>
 		          	<ul class="nav navbar-nav pull-right">
+		          		<li>
+		          			<button class="button" onclick="changeColor('#99ff99')"></button>
+		          			<button class="button button2" onclick="changeColor('#ff99cc')"></button>
+		          			<button class="button button3" onclick="changeColor('#66ccff')"></button>
+		          			<button class="button button4" onclick="changeColor('#ff3300')"></button>
+		          			<button class="button button5" onclick="changeColor('#555555')"></button>
+		          			<button class="button button6" onclick="changeColor('#FFFFFF')"></button>
+		          		</li>
 		            	<li class="nav-link"><a href="#game-rules-modal" data-toggle="modal">Game Rules</a></li>
 		            	<li class="nav-link"><a href="#login-modal" id="login-button" class="login-button" data-toggle="modal">Login</a></li>
 	            		<li class="dropdown">
@@ -409,6 +417,11 @@
 			<img id="muteButton" src="assets/volume.png" style="width:20px;height:20px;">
 			<strong id="musicTitle"></strong>
 			<input id="volumeslider" type="range" min="0" max="100" value="25" step="1">
+		</div>
+
+		<div id="color_control">
+
+
 		</div>
 		
 	    <!--=====================================ALERT===================================-->
