Disabled online multiplayer when the user is not logged in using a formal account

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -162,7 +162,7 @@
 					<label class="btn btn-default">
 						<input type="radio" name="play-mode-radio" value="single" autocomplete="off"> 1 Player
 					</label>
-					<label class="btn btn-default">
+					<label class="btn btn-default initially-hidden" id="online-multiplayer-radio">
 						<input type="radio" name="play-mode-radio" value="online" autocomplete="off"> Online Multiplayer
 					</label>
 				</div>
