Added implementation of bar color and color button, changed the text style.

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -50,20 +50,18 @@
 		       		</div>
 		          	<ul class="nav navbar-nav pull-right">
 		          		<li>
-		          			<button class="button" onclick="changeColor('#99ff99')"></button>
-		          			<button class="button button2" onclick="changeColor('#ff99cc')"></button>
-		          			<button class="button button3" onclick="changeColor('#66ccff')"></button>
-		          			<button class="button button4" onclick="changeColor('#ff3300')"></button>
-		          			<button class="button button5" onclick="changeColor('#555555')"></button>
-		          			<button class="button button6" onclick="changeColor('#FFFFFF')"></button>
+		          			<button class="button" onclick="changeColor('#e6e6ff')"></button>
+		          			<button class="button button2" onclick="changeColor('#cceeff')"></button>
+		          			<button class="button button3" onclick="changeColor('#ffe6f2')"></button>
+		          			<button class="button button4" onclick="changeColor('#ffffff')"></button>
 		          		</li>
-		            	<li class="nav-link"><a href="#game-rules-modal" data-toggle="modal">Game Rules</a></li>
-		            	<li class="nav-link"><a href="#login-modal" id="login-button" class="login-button" data-toggle="modal">Login</a></li>
+		            	<li class="nav-link"><a href="#game-rules-modal" data-toggle="modal" style="font-weight: bold">Game Rules</a></li>
+		            	<li class="nav-link"><a href="#login-modal" id="login-button" class="login-button" data-toggle="modal" style="font-weight: bold">Login</a></li>
 	            		<li class="dropdown">
-	            			<a href="#" id="username-button" class="dropdown-toggle" data-toggle="dropdown"></a>
+	            			<a href="#" id="username-button" class="dropdown-toggle" data-toggle="dropdown" style="font-weight: bold"></a>
 	            			<ul class="dropdown-menu">
-	            				<li><a href="#" id="game-history-button">Game History</a></li>
-	            				<li><a href="#" id="logout-button">Logout</a></li>
+	            				<li><a href="#" id="game-history-button" style="font-weight: bold">Game History</a></li>
+	            				<li><a href="#" id="logout-button" style="font-weight: bold">Logout</a></li>
 	            			</ul>
 	            		</li>
 		          	</ul>
