Make the game mode selection page look nice(r)

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -124,9 +124,58 @@
 	    <!--============================== GAME MODE PAGE =============================-->
 
 	    <div id="game-mode-page" class="page-section initially-hidden">
-	    	<button id="game-mode-hotseat-button" type="button" class="btn btn-default">Local Multiplayer</button>
-	    	<button id="game-mode-single-button" type="button" class="btn btn-default">Single Player</button>
-	    	<button id="game-mode-online-button" type="button" class="btn btn-default">Online Multiplayer</button>
+
+	    	<br><br><br>
+
+	    	<div class="row">
+	    		<div class="col-md-3"></div>
+				<div class="col-md-2">
+					<div class="fh5co-main-service">
+						<a id='game-mode-hotseat-button' href="#" class="fh5co-block-links text-center">
+							<div class="icon-circle">
+								<i class="ti-crown"></i>
+							</div>
+							<h2>Local Multiplayer</h2>
+							<p>Multiplayer on a single computer.</p>
+							<p><span class="learn-more">Play</span></p>
+						</a>
+					</div>		
+				</div>
+				<div class="col-md-2">
+
+					<div class="fh5co-main-service">
+						<a id="game-mode-single-button" href="#" class="fh5co-block-links text-center">
+							<div class="icon-circle">
+								<i class="ti-desktop"></i>
+							</div>
+							<h2>Single Player</h2>
+							<p>Play against the computer.</p>
+							<p><span class="learn-more">Play</span></p>
+						</a>
+					</div>	
+
+				</div>
+				<div class="col-md-2">
+
+					<div class="fh5co-main-service">
+						<a id="game-mode-online-button" href="#" class="fh5co-block-links text-center">
+							<div class="icon-circle">
+								<i class="ti-medall"></i>
+							</div>
+							<h2>Online Multiplayer</h2>
+							<p>Play against other signed in users.</p>
+							<p><span class="learn-more">Play</span></p>
+						</a>
+					</div>		
+
+				</div>
+				<div class="col-md-3"></div>
+
+			</div>
+
+	    	<<!-- button id="game-mode-hotseat-button" type="button" class="btn btn-primary">Local Multiplayer</button>
+	    	<button id="game-mode-single-button" type="button" class="btn btn-info btn-lg">Single Player</button>
+	    	<button id="game-mode-online-button" type="button" class="btn btn-default">Online Multiplayer</button> -->
 	    </div>
 
 	    <!--============================= GAME OPTIONS PAGE =============================-->
