--- a/client/html/home.html
+++ b/client/html/home.html
@@ -570,7 +570,8 @@
 		<div id='music-control-panel'>
 			<img id="playButton" src="assets/pause.png" style="width:20px;height:20px;">
 			<img id="muteButton" src="assets/volume.png" style="width:20px;height:20px;">
-			<strong id="musicTitle"></strong>
+			<select id="musicTitle">
+			</select>
 			<input id="volumeslider" type="range" min="0" max="100" value="25" step="1">
 		</div>
 
