Fixed page-refreshing problem. Fixed pushed submit-host-button issue. Fixed incomplete function call to suspend the current hosting session. Fixed the undefined userList problem.

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -230,7 +230,7 @@
 
 						<br><br>
 
-						<button id="submit-options-button" class="btn btn-block btn-default">Let's Go!</button>
+						<label id="submit-options-button" class="btn btn-block btn-default">Let's Go!</label>
 					</form>
 
 	    		</div>
@@ -528,7 +528,7 @@
 
 					</div>
 					<div class="modal-footer">
-						<button id="submit-host-button" class="btn btn-default active">Submit</button>
+						<button id="submit-host-button" class="btn btn-default">Submit</button>
 					</div>
 				</div>
 
