Dynamic token image size on home page

--- a/client/html/home.html
+++ b/client/html/home.html
@@ -107,12 +107,12 @@
 	  	<div id="home-page" class="page-section">
 			<header id="fh5co-header" role="banner">
 
-				<img src="assets/token_raccoon.svg" align="right"></img>
-				<img src="assets/token_panda.svg" align="right"></img>
-				<img src="assets/token_fox.svg" align="right"></img>
-				<img src="assets/token_cat.svg" align="center"></img>
-				<img src="assets/token_wolf.svg" align="left"></img>
-				<img src="assets/token_bear.svg" align="left"></img>
+				<img class="home-page-token" src="assets/token_raccoon.svg" align="right"></img>
+				<img class="home-page-token" src="assets/token_panda.svg" align="right"></img>
+				<img class="home-page-token" src="assets/token_fox.svg" align="right"></img>
+				<img class="home-page-token" src="assets/token_cat.svg" align="center"></img>
+				<img class="home-page-token" src="assets/token_wolf.svg" align="left"></img>
+				<img class="home-page-token" src="assets/token_bear.svg" align="left"></img>
 
 				<div class="fh5co-header-intro">
 					<h1>The Game of Go</h1>
